--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* Tailwind CSS Directives */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Global Reset and Base Styles */
 * {
   margin: 0;
